# shared/generated/swagger.json
@@ -149,6 +149,37 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"KaraokeArea": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"currentSong": {
+						"type": "string"
+					},
+					"songQueue": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"isPlaying": {
+						"type": "boolean"
+					},
+					"elapsedTimeSec": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id",
+					"songQueue",
+					"isPlaying",
+					"elapsedTimeSec"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"PosterSessionArea": {
 				"properties": {
 					"id": {
@@ -467,6 +498,63 @@
 							"schema": {
 								"$ref": "#/components/schemas/ViewingArea",
 								"description": "The new viewing area to create"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/towns/{townID}/karaokeArea": {
+			"post": {
+				"operationId": "CreateKaraokeArea",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Invalid values specified",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InvalidParametersError"
+								}
+							}
+						}
+					}
+				},
+				"description": "Creates a karaoke area in a given town",
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "ID of the town in which to create the new karaoke area",
+						"in": "path",
+						"name": "townID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"description": "session token of the player making the request, must\nmatch the session token returned when the player joined the town",
+						"in": "header",
+						"name": "X-Session-Token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "The new karaoke area to create",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/KaraokeArea",
+								"description": "The new karaoke area to create"
 							}
 						}
 					}
